# PI

./: .gitignore  README.md
atividades2/exercicio1/: main.c
atividades2/exercicio2/: main.c
atividades2/exercicio3/: main.c
cadastro/: README.md  cadastroFuncs.c  cadastroFuncs.h  main  main.c  makefile  registroUsuarios.txt
cadastro/fluxo1/: makefile
cadastroFluxo1/: cadastroFuncs.h  main.c
cadastroFluxo2/: cadastroFuncs.c  cadastroFuncs.h  main.c  makefile
emprestimoDeSalas/: CMakeLists.txt  Funcoes.1  LICENSE  hemir.ui~
emprestimoDeSalas/include/: CMakeLists.txt  limparTela.h  loginFuncs.h  reservasFuncs.h
emprestimoDeSalas/include/limparTela/: limparTela.c
emprestimoDeSalas/include/loginFuncs/: loginFuncs.c
emprestimoDeSalas/include/reservasFuncs/: reservasFuncs.c  reservasFuncs.h
emprestimoDeSalas/res/: hemir.ui  reservas.csv  userBase.txt
emprestimoDeSalas/src/: CMakeLists.txt  aime  aime.c  dbg.h  gptteste.c  limparTela.c  loginFuncs.c  main  main.c  mainGUI.c  remocaoReservasPrototipo  remocaoReservasPrototipo.c  reservas.txt  reservasFuncs.c
